Adding JSON response in server.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,9 +29,16 @@
       <% } %>
     </ul>
 
+    <div>
+      <h2>Darth Vader invades!</h2>
+      <p>Replace first Yoda's quote with a quote written by Darth Vader</p>
+      <button id="update-button">Replace Yoda's quote</button>
+    </div>
+
     <!-- If we display quotes just like this they'll appear just like objects
     because ejs can't convert the object into HTML in auto, so we loop like
     above -->
     <!-- <%= quotes %> -->
+    <script src="/main.js"></script>
 </body>
 </html>
